src/test/deca/syntax/valid/provided/Object.deca
class A {
 int field = 10;
}

class B {
 void test() {
 Object obj = new A();
 
 }
}