src/test/deca/syntax/invalid/provided/faux_type_meth.deca
class A {
    int x;

    void int get(){

    }
}